tests/baselines/reference/parserInterfaceDeclaration8.errors.txt
==== tests/cases/compiler/parserInterfaceDeclaration8.ts (2 errors) ====
    interface string {
              ~~~~~~
!!! parserInterfaceDeclaration8.ts(1,11): error TS2000: Duplicate identifier 'string'.
              ~~~~~~
!!! parserInterfaceDeclaration8.ts(1,11): error TS2242: Interface name cannot be 'string'.
    }